apps/base/minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    toolkit.fluxcd.io/tenant: dev-team1
