apps/base/minio/releases.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    toolkit.fluxcd.io/tenant: persistence
